[package]
name = "minter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {version = "1.0.79", features = ["backtrace"]}
bip39 = "2.0.0"
bitcoin = { version = "0.29.1", features = ["rand", "serde"] }
bitcoin_hashes = "0.9"
chrono = "0.4.31"
clap = {version = "4.4.13", features = ["derive"]}
ctrlc = "3.4.2"
derive_more = "0.99.17"
dirs = "5.0.1"
env_logger = "0.10.1"
hex = "0.4.3"
reqwest = { version = "0.11.23", features = ["json", "blocking"] }
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
serde_yaml = "0.9.30"
tokio = { version = "1.35.1", features = ["full"] }


[[bin]]
name = "minter"
path = "src/bin/main.rs"

[lib]
name = "minter"
path = "src/lib.rs"

[patch.crates-io]
bitcoin = { path = "rust-bellscoin" }
